<resources>
    <string name="app_name">Tima</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="course_name">EDA397</string>
    <string name="group_name">Group 5</string>
    <string name="basic_timer">Basic timer</string>
    <string name="sequential_timer">Sequential timer</string>
    <string name="statistics">Statistics</string>
    <string name="share">Share</string>

    <string name="timer_button_start">Start</string>
    <string name="timer_button_pause">Pause</string>
    <string name="timer_button_reset">Reset</string>
    <string name="back">Back</string>

    <string name="action_settings">Settings</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="all_time">All-time</string>
    <string name="tags">Tags</string>
    <string name="others">Others</string>
    <string name="total">Total</string>
    <string name="remote_service_started">Remote Started</string>
    <string name="remote_service_stopped">Remote stopped</string>
    <string name="local_service_label">Timer</string>
    <string name="timer_button_stop">Stop</string>
    <string name="this_is_a_detailed_view_of_the_statistics">This is a detailed view of the statistics</string>
    <string name="edit_text_hint">(Minute)</string>
    <string name="edit_text_default_value">0</string>
    <string name="initial_timer_value">00:00:00</string>
    <string name="start_time">Start Time</string>
    <string name="tag">Tag</string>
    <string name="tag_specific_info">Tag Specific Info</string>
    <string name="all_data">All data</string>
    <string name="Duration">Duration</string>
    <string name="error">Error</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nextTimerButton">Next timer</string>
</resources>
