<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

            <item
                android:id="@+id/nav_timer_basic"
                android:icon="@android:drawable/ic_menu_recent_history"
                android:title="@string/basic_timer" />
            <item
                android:id="@+id/nav_timer_sequential"
                android:icon="@android:drawable/ic_menu_recent_history"
                android:title="@string/sequential_timer" />

        <item android:title="Tools">
            <menu>
                <item
                android:id="@+id/nav_statistics"
                android:icon="?android:attr/actionModePasteDrawable"
                android:title="@string/statistics" />
                <!--
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="Settings" />
                    -->
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/share" />
            </menu>
        </item>
    </group>



</menu>
