<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.983"
        app:srcCompat="@drawable/ic_play_arrow_black_48dp"
        android:tint="#607C8A"/>

    <TextView
        android:id="@+id/timerLabelTV"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:text="Timer label"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/timerTagLabelTV"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAlignment="textEnd"
        android:text="@string/tags"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/timerLabelTV" />

    <TextView
        android:id="@+id/timerTagsTV"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAlignment="textEnd"
        tools:text="tag1\ntag2\n+3"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerTagLabelTV" />

    <EditText
        android:id="@+id/basicTimerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/initial_timer_value"
        android:textColor="@color/colorAccent"
        android:textSize="56sp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBarCircle"
        app:layout_constraintLeft_toLeftOf="@+id/progressBarCircle"
        app:layout_constraintRight_toRightOf="@+id/progressBarCircle"
        app:layout_constraintTop_toTopOf="@+id/progressBarCircle"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="number"
        android:cursorVisible="false"
        />

    <ProgressBar
        android:id="@+id/progressBarCircle"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_centerInParent="true"
        android:background="@drawable/drawable_circle_dark"
        android:indeterminate="false"
        android:max="100"
        android:progress="100"
        android:progressDrawable="@drawable/drawable_circle"
        android:rotation="-90"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/timerResetButton"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Chronometer
        android:id="@+id/chronometerBasicTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.496" />

    <Button
        android:id="@+id/timerStartPauseButton"
        android:layout_width="213dp"
        android:layout_height="66dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/timer_button_start"
        android:textColor="@color/colorAccent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerResetButton"
        app:layout_constraintVertical_bias="0.368" />

    <Button
        android:id="@+id/timerResetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="53dp"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimary"
        android:text="@string/timer_button_reset"
        android:textColor="@color/colorAccent"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basicTimerTV" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:tint="#607C8A"
        android:background="@null"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_autorenew_black_48dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.949" />



</android.support.constraint.ConstraintLayout>
